GroceryPackage/main/default/objects/Item__c/fields/ItemPrice__c.field-meta.xml
<CustomField>
    <fullName>ItemPrice__c</fullName>
    <label>ItemPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>