GroceryPackage/main/default/objects/Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <length>20</length>
    <type>Text</type>
</CustomField>